타임라인 로드 개발

--- a/src/renderer/pages/startup/startup.css
+++ b/src/renderer/pages/startup/startup.css
@@ -18,8 +18,8 @@ li {
   list-style: none;
 }
 #root {
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
 }
 .signin-submit {
   background-color: #0074d9;
