--- a/src/renderer/pages/List/list.css
+++ b/src/renderer/pages/List/list.css
@@ -2,3 +2,29 @@
   width: 100%;
   height: 100%;
 }
+
+.post-list {
+  width: 100%;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow-y: scroll;
+}
+
+.post-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 1em;
+  border-width: 0 1px 1px 0;
+  border-color: black;
+  border-style: solid;
+}
+
+.post-avatar-img {
+  width: 4em;
+  height: 4em;
+  border-radius: 50%;
+  margin-right: 1em;
+}
