--- a/src/renderer/pages/List/list.css
+++ b/src/renderer/pages/List/list.css
@@ -14,12 +14,11 @@
 
 .post-wrapper {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  margin-bottom: 1em;
   border-width: 0 1px 1px 0;
-  border-color: black;
-  border-style: solid;
+  border-color: gray;
+  border-style: dashed;
 }
 
 .post-avatar-img {
@@ -27,4 +26,40 @@
   height: 4em;
   border-radius: 50%;
   margin-right: 1em;
+}
+
+.list-title {
+  background-color: #1e90ff;
+  color: #ffffff;
+  height: 2em;
+  display: flex;
+  padding-left: 1em;
+  font-size: 1.2em;
+  font-weight: 600;
+  align-items: center;
+}
+.post-active-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.post-active {
+  color: #ffffff;
+  width: 0;
+  height: 0;
+  border-top: 2em solid transparent;
+  border-bottom: 2em solid transparent;
+
+  border-left: 1em solid #1e90ff;
+}
+.post-header {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5em;
+  flex: 1;
+}
+.post-header-text {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
 }
